# ota-partition-Solarsmart

./: CMakeLists.txt  README.md  partitions.csv
components/esp32-wifi-manager/: CMakeLists.txt  Kconfig  component.mk
components/esp32-wifi-manager/src/: wifi_manager.c
main/: CMakeLists.txt  main.c  new_partition.h  ota.c  ota.h  partition_impl.cc
